# gpc-init

./: .gitignore  .justfile  .mutmut-equivalents.json  .pre-commit-config.yaml  .pyscn.toml  .ryl.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  mutmut-results.md  pyproject.toml  setup.cfg
.claude/workflows/: mutmut-kill-survivors.js
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: new-preset.yml
.github/agents/: speckit.agent-context.update.agent.md  speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/workflows/: test-build-publish.yml  validate-presets.yml
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/extensions/agent-context/: README.md  agent-context-config.yml  extension.yml
.specify/extensions/agent-context/commands/: speckit.agent-context.update.md
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh
.specify/workflows/: workflow-registry.json
.specify/workflows/speckit/: workflow.yml
framework/bevy/: preset.yaml
framework/django/: preset.yaml
framework/git/: preset.yaml
framework/k8s/: preset.yaml
framework/react/: preset.yaml
framework/sphinx/: presets.yaml
gpc_init/: __init__.py  about.py  cli.py  detector.py  exceptions.py  fetcher.py  loader.py  merger.py  profiles.py  renderer.py  resolver.py
lang/common/: default.yaml  preset.yaml
lang/docker/: preset.yaml
lang/go/: preset.yaml
lang/img/: preset.yaml
lang/js/: preset.yaml
lang/md/: baseline.yaml  preset.yaml
lang/nb/: preset.yaml
lang/py/: baseline.yaml  preset.yaml
lang/r/: preset.yaml
lang/ru/: baseline.yaml  preset.yaml
lang/sh/: preset.yaml
lang/sql/: preset.yaml
lang/tf/: preset.yaml
lang/toml/: preset.yaml
lang/ts/: preset.yaml
lang/yaml/: baseline.yaml  preset.yaml
scripts/: generate_awesome_list.py
specs/001-pc-init-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pc-init-cli/checklists/: requirements.md
specs/001-pc-init-cli/contracts/: cli-contract.md
tests/: conftest.py
tests/fixtures/framework/react/: preset.yaml
tests/fixtures/lang/common/: preset.yaml
tests/fixtures/lang/js/: baseline.yaml  preset.yaml
tests/fixtures/lang/py/: preset.yaml
tests/integration/: test_cli_generation.py
tests/unit/: test_detector.py  test_exceptions.py  test_fetcher.py  test_loader.py  test_merger.py  test_profiles.py  test_renderer.py  test_resolver.py
