[dependency-groups]
dev = [
    "deptry>=0.24.0",
    { include-group = "lint" },
    { include-group = "test" },
]
lint = [
    "complexipy",
    "prek>=0.4.5",
    "pyrefly>=1.1.1",
    "ruff",
    "rumdl>=0.0.129",
    "ryl>=0.21.0",
]
test = [
    "complexipy>=5.6.1,<6.0.0",
    "coverage[toml]",
    "lizard>=1.23.0,<2.0.0",
    "mutmut>=3.6.0,<4.0.0",
    "pytest",
    "pytest-cov",
    "radon>=6.0.1,<7.0.0",
    "ty>=0.0.51",
]

[project]
authors = [
    { email = "christian.ledermann@gmail.com", name = "Christian Ledermann" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.26.7",
]
description = "Generate .pre-commit-config.yaml from language and framework presets"
keywords = [
    "cli",
    "code-quality",
    "linting",
    "pre-commit",
    "presets",
]
license = "GPL-3.0-only"
name = "pc-init"
readme = "README.md"
requires-python = ">=3.13"
version = "0.4.0"

[project.scripts]
pc-init = "gpc_init.cli:entry_point"

[project.urls]
"Bug Tracker" = "https://github.com/cleder/gpc-init/issues"
Changelog = "https://github.com/cleder/gpc-init/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cleder/gpc-init"
Repository = "https://github.com/cleder/gpc-init"

[tool.mutmut]
also_copy = [
    "gpc_init/framework",
    "gpc_init/lang",
]
do_not_mutate_patterns = [
    "logger\\.\\w+",
    "raise \\w+",
]
pytest_add_cli_args_test_selection = [
    "tests/",
]
source_paths = [
    "gpc_init/",
]

[tool.pyrefly]
project_excludes = [
    "specs/**",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
extend-fixable = [
    "D",
]
extend-safe-fixes = [
    "D",
    "UP047",
]
ignore = [
    "ANN401",
    "COM812",
    "D203",
    "D212",
]
select = [
    "ALL",
]

[tool.ruff.lint.extend-per-file-ignores]
"gpc_init/cli.py" = [
    "ARG001",
    "FBT001",
    "FBT002",
    "PLR0913",
]
"tests/**" = [
    "ANN001",
    "ANN202",
    "ANN401",
    "D1",
    "PLR0913",
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "SLF001",
    "TC003",
]
"tests/services/data/sync_job_data.py" = [
    "E501",
]
"tests/services/data/webhooks_data.py" = [
    "E501",
]

[tool.rumdl]
exclude = [
    ".git",
    ".github",
    "build",
    "dist",
    "node_modules",
    "vendor",
]
respect-gitignore = true

[tool.rumdl.MD013]
line-length = 0
reflow = true
reflow-mode = "sentence-per-line"

[tool.setuptools.package-data]
gpc_init = [
    "framework/**/*.yaml",
    "lang/**/*.yaml",
]

[tool.setuptools.packages.find]
include = [
    "gpc_init*",
]

[tool.uv]
add-bounds = "major"
